--- a/template.html
+++ b/template.html
@@ -29,15 +29,14 @@
 
         <div class="section-title">
           <h2>Fiction</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="image-box">
-              <div class="image"><i class="bx bxl-dribbble"></i></div>
+              <div class="image">
+                <img src="./assets/img/placeholder">
               <h4><a href="">${title}</a></h4>
               <p>'Author:' + ${author}</p>
               <p>'Date Published:' + ${date}</p>
@@ -49,7 +48,8 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="image-box">
-              <div class="image"><i class="bx bx-file"></i></div>
+              <div class="image">
+                <img src="./assets/img/placeholder">
               <h4><a href="">${title}</a></h4>
               <p>'Author:' + ${author}</p>
               <p>'Date Published:' + ${date}</p>
@@ -61,7 +61,8 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="image-box">
-              <div class="image"><i class="bx bx-tachometer"></i></div>
+            <div class="image">
+              <img src="./assets/img/placeholder">
               <h4><a href="">${title}</a></h4>
               <p>'Author:' + ${author}</p>
               <p>'Date Published:' + ${date}</p>
@@ -73,7 +74,8 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="image-box">
-              <div class="image"><i class="bx bx-world"></i></div>
+              <div class="image">
+                <img src="./assets/img/placeholder">
               <h4><a href="">${title}</a></h4>
               <p>'Author:' + ${author}</p>
               <p>'Date Published:' + ${date}</p>
@@ -85,7 +87,8 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="image-box">
-              <div class="image"><i class="bx bx-slideshow"></i></div>
+              <div class="image">
+                <img src="./assets/img/placeholder">
               <h4><a href="">${title}</a></h4>
               <p>'Author:' + ${author}</p>
               <p>'Date Published:' + ${date}</p>
@@ -97,7 +100,8 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="image-box">
-              <div class="image"><i class="bx bx-arch"></i></div>
+              <div class="image">
+                <img src="./assets/img/placeholder">
               <h4><a href="">${title}</a></h4>
               <p>'Author:' + ${author}</p>
               <p>'Date Published:' + ${date}</p>
